# Triangulation-ESGI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Application/: CMakeLists.txt
Application/include/: Application.hpp  ImGuiLib.hpp  Scene.hpp
Application/include/Core/: Reinterpreter.hpp  Singleton.hpp  raylibMathHelper.hpp
Application/include/Render/: Camera.hpp  EditorCamera.hpp  Renderable.hpp
Application/src/: Application.cpp  ImGuiLib_RaylibInputs.cpp  Scene.cpp  main.cpp
Application/src/Render/: Camera.cpp  EditorCamera.cpp
Assets/: LICENSE.md
Libraries/: CMakeLists.txt
Libraries/ImGui-RayLib/: CMakeLists.txt
MathLib/: CMakeLists.txt
MathLib/include/TRG/: Math.hpp
MathLib/include/TRG/Math/: Basics.hpp  Geometry.hpp  Mesh.hpp  Raycast.hpp  Shells.hpp  Triangulation.hpp  Types.hpp
MathLib/src/: Math.cpp
Tests/: CMakeLists.txt
Tests/src/: test_math.cpp
